syntax = "proto3";

package images;

message Image {
  int32 id = 1;
  string path = 2;
  string description = 3;
  int64 created_at = 4;
  string title = 5;
  repeated string tags = 6;
  string type = 7;
}

message MissingImage {
  int32 id = 1;
  string title = 2;
  string type = 3;
  string size = 4;
  int32 total = 5;
}

message CreateImageRequest {
  string path = 1;
  string description = 2;
  string title = 3;
  repeated string tags = 4;
  string type = 5;
}

message CreateMissingImageRequest {
  string title = 2;
  string type = 3;
  string size = 4;
  int32 total = 5;
}

message GetImageRequest {
  int32 id = 1;
}

message ListImagesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListImagesResponse {
  repeated Image images = 1;
  int32 total_count = 2;
}

message UploadImageRequest {
  bytes file_data = 1;
  string filename = 2;
  string description = 3;
  string image_type = 4;
}

message GetMissingImageRequest {
  int32 id = 1;
}

message ListMissingImageRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListMissingImageResponse {
  repeated MissingImage images = 1;
}

service ImageService {
  rpc CreateImage (CreateImageRequest) returns (Image);
  rpc GetImage (GetImageRequest) returns (Image);
  rpc ListImages (ListImagesRequest) returns (ListImagesResponse);
  rpc UploadImage (UploadImageRequest) returns (Image);

}